Port to NeoForge 1.21.1
- Migrate build system to NeoForge 21.1.219 / MC 1.21.1
  (Java 21, pack format 34/48, neoforge.mods.toml,
  FML loader [4,))
- Rewrite networking to CustomPacketPayload + StreamCodec
  pattern (7 payloads, IPayloadContext, main-thread
  handlers)
- Migrate ItemStack NBT to DataComponents API
  (CustomData, parseOptional/saveOptional with
  HolderLookup.Provider)
- Update Block.use() to useWithoutItem() split (1.20.5+)
- Update VertexConsumer API (addVertex/setColor/setUv/
  setOverlay/setLight/setNormal, remove endVertex)
- Update rendering APIs (putBulkData alpha param,
  DeltaTracker, bake() signature, ResourceLocation::parse)
- Update Screen APIs (remove renderDirtBackground,
  setRenderBackground)
- Update appendHoverText to Item.TooltipContext signature
- Fix onDataPacket to route through handleUpdateTag for
  live model updates
- Depluralize data pack paths (loot_table/, recipe/,
  tags/block/, tags/item/)
- Migrate recipe tags from forge: to c: namespace and
  result key from "item" to "id"
- Remove deprecated EventBusSubscriber.Bus parameter
  (auto-detected in 21.1+)
- Remove redundant @SuppressWarnings("deprecation") on
  methods no longer deprecated in 1.21.1
- Fix null safety, unused imports, and IntelliJ warnings
- Update README requires section for 1.21.1
- Bump version to v1.10-neoforge-1.21.1